# advent-of-code

./: .gitignore
2019/day-10/: Cargo.toml
2019/day-11/: Cargo.toml
2019/day-12/: Cargo.toml
2019/day-14/: Cargo.toml
2019/day-15/: Cargo.toml
2019/day-16/: Cargo.toml
2019/day-17/: Cargo.toml
2019/day-22/: Cargo.toml
2019/day-23/: Cargo.toml
2019/day-24/: Cargo.toml
2019/day-3/: Cargo.toml
2019/day-6/: Cargo.toml
2019/day-7/: Cargo.toml
2019/day-8/: Cargo.toml
2020/: create_new_day.sh
2020/day-1/: day-1.py
2020/day-10/: day-10.py
2020/day-11/: day-11.py
2020/day-12/: day-12.py
2020/day-13/: day-13.py
2020/day-14/: day-14.py
2020/day-15/: day-15.py
2020/day-16/: day-16.py
2020/day-17/: day-17.py
2020/day-18/: day-18.py
2020/day-19/: day-19.py
2020/day-2/: day-2.py
2020/day-20/: day-20.py
2020/day-21/: day-21.py
2020/day-22/: day-22.py
2020/day-23/: day-23.py
2020/day-24/: day-24.py
2020/day-25/: day-25.py
2020/day-3/: day-3.py
2020/day-4/: day-4.py
2020/day-5/: day-5.py
2020/day-6/: day-6.py
2020/day-7/: day-7.py
2020/day-8/: day-8.py
2020/day-9/: day9.py
2020/template/: template.py
2022/: Cargo.toml
2022/src/: main.rs
2023/: Cargo.toml  output.txt
day-1-improved/: Cargo.toml
day-1-improved/src/: main.rs
day-1/src/: main.rs
day-10/src/: main.rs
day-13/: Cargo.toml
day-18/: Cargo.toml
day-19/: Cargo.toml
day-2/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-25/: Cargo.toml
day-4/: Cargo.toml
day-5/: Cargo.toml
day-9/: Cargo.toml
(+30 files in other folders)
