[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

default-run = "day-25"

[dependencies]
regex = "1"


[[bin]]
name = "day-1"
[[bin]]
name = "day-2"
[[bin]]
name = "day-3"
[[bin]]
name = "day-4"
[[bin]]
name = "day-5"
[[bin]]
name = "day-6"
[[bin]]
name = "day-7"
[[bin]]
name = "day-8"
[[bin]]
name = "day-9"
[[bin]]
name = "day-10"
[[bin]]
name = "day-11"
[[bin]]
name = "day-12"
[[bin]]
name = "day-13"
[[bin]]
name = "day-14"
[[bin]]
name = "day-15"
[[bin]]
name = "day-16"
[[bin]]
name = "day-17"
[[bin]]
name = "day-18"
[[bin]]
name = "day-19"
[[bin]]
name = "day-20"
[[bin]]
name = "day-21"
[[bin]]
name = "day-22"
[[bin]]
name = "day-23"
[[bin]]
name = "day-24"
[[bin]]
name = "day-25"